Now user can enter start date and end date separately on different date-pickers. end date is disabled without start date as it brings an exception. Transactions are sorted in the tableview